--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./CSS/header.css">
         <link rel="stylesheet" href="./CSS/main.css">
         <link rel="stylesheet" href="./CSS/footer.css">
+        <link rel="stylesheet" href="./CSS/responsive.css">
         <!--Fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
